--- a/ui.html
+++ b/ui.html
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light">Irving, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">Omaha, Nebraska</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light">Littleton, CO, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698423478-ui-ux'>ClientSolv Technologies UI/UX | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698423478-ui-ux'>ClientSolv Technologies UI/UX | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698363335-ux-ui-designer'>lm group UX/UI Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698363335-ux-ui-designer'>lm group UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -218,7 +218,7 @@
 <p><span class="badge badge-light">France  France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://verifiedrecruit.com/job/recruiting-bank-tellers-for-a-leading-bank-nationwide/'>RECRUITING BANK TELLERS FOR A LEADING BANK NATIONWIDE? - Verified Recruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verifiedrecruit.com/job/recruiting-bank-tellers-for-a-leading-bank-nationwide/'>RECRUITING BANK TELLERS FOR A LEADING BANK NATIONWIDE? - Verified Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -248,7 +248,7 @@
 <p><span class="badge badge-light">Hong Kong Hong Kong</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vgp.co.za/job/ux-ui-designer-innovative-tech-brand-cape-town-cbd/'>UX/UI Designer: Innovative Tech Brand ? Cape Town, CBD - VGP</a></h5> 
+<h5><a href='https://vgp.co.za/job/ux-ui-designer-innovative-tech-brand-cape-town-cbd/'>UX/UI Designer: Innovative Tech Brand ? Cape Town, CBD - VGP</a></h5> 
 <p><span class="badge badge-light">Cape Town</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -459,7 +459,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/research-specialist-5592'>Research Specialist - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/research-specialist-5592'>Research Specialist - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
