--- a/ux.html
+++ b/ux.html
@@ -42,7 +42,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1933485'>Job Application for Product Designer, UX at ServiceTitan</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=ousLafwB&__jvst=Employee+Referral&__jvsd=sLMJxgwy&__jvsc=Twitter&bid=nea8nMwa'>Curriculum Associates Careers - Senior UX Researcher</a></h5> 
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qL9aVfwJ&k=Job&j=oROrbfw1&__jvst=Employee&__jvsd=sVZebhw5&__jvsc=Twitter&bid=nR0NnMwi'>Loanpal Careers - Senior UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qL9aVfwJ&k=Job&j=oROrbfw1&__jvst=Employee&__jvsd=sVZebhw5&__jvsc=Twitter&bid=nR0NnMwi'>Loanpal Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Roseville, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -213,7 +213,7 @@
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698130783-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698130783-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -221,7 +221,7 @@
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://ontheshortlist.zohorecruit.com/recruit/ViewJob.na?digest=OMxI@vOMIjkz5CDtFyJpJcBdio.pCanMiyrTEJpQk3w-&embedsource=Twitter'>Junior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ontheshortlist.zohorecruit.com/recruit/ViewJob.na?digest=OMxI@vOMIjkz5CDtFyJpJcBdio.pCanMiyrTEJpQk3w-&embedsource=Twitter'>Junior UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -233,7 +233,7 @@
 <p><span class="badge badge-light">Kenya</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584752'>Stellenangebot: (Junior) UX Designer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584752'>Stellenangebot: (Junior) UX Designer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -249,7 +249,7 @@
 <p><span class="badge badge-light">London London  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://holycodedoo.applytojob.com/apply/tPf1i9A4j0/Mobile-UXUI-Designer-Smallpdf-Team'>Mobile UX/UI designer - Smallpdf team - Holycode - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://holycodedoo.applytojob.com/apply/tPf1i9A4j0/Mobile-UXUI-Designer-Smallpdf-Team'>Mobile UX/UI designer - Smallpdf team - Holycode - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -257,11 +257,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/uXz44E944S/UX-Researcher'>UX Researcher - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/uXz44E944S/UX-Researcher'>UX Researcher - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Kirkland, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/8yGeICn4CJ/Sr-UX-Researcher'>Sr. UX Researcher - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/8yGeICn4CJ/Sr-UX-Researcher'>Sr. UX Researcher - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -273,7 +273,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/GkKpjNco3f/Quantitative-UX-Researcher-SQL-RPython-Mountain-View-CA'>Quantitative UX Researcher (SQL, R/Python) (Mountain View, CA) - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/GkKpjNco3f/Quantitative-UX-Researcher-SQL-RPython-Mountain-View-CA'>Quantitative UX Researcher (SQL, R/Python) (Mountain View, CA) - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -299,7 +299,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">New York  San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -373,7 +373,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://maxcluster.join.com/jobs/463371-ui-ux-frontend-designer-m-w-d'>Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://maxcluster.join.com/jobs/463371-ui-ux-frontend-designer-m-w-d'>Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -415,7 +415,7 @@
 <p><span class="badge badge-light">Cape Town</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://zeix.com/jobs/einstiegspraktikum-user-experience-junior-ux/'>Einstiegspraktikum User Experience (Junior UX) - Zeix, UX Agentur</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zeix.com/jobs/einstiegspraktikum-user-experience-junior-ux/'>Einstiegspraktikum User Experience (Junior UX) - Zeix, UX Agentur</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -429,7 +429,7 @@
 <p><span class="badge badge-light">Warszawa, Polska</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698266403-ux-designer'>Publicis Groupe UX Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698266403-ux-designer'>Publicis Groupe UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -453,7 +453,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584455'>Stellenangebot: Senior UX Designer / Concepter (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584455'>Stellenangebot: Senior UX Designer / Concepter (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
